# TootNet

./: .gitignore  LICENSE  README.ja.md  README.md  TootNet.sln
TootNet.Demo/: Program.cs  TootNet.Demo.csproj  TootNet.Demo.sln
TootNet.Generator/: .gitignore  GenerateRestCS.py  GenerateTemplateJson.py  TootNet.Generator.pyproj  data.json  pyproject.toml
TootNet.Generator/api_templates/: accounts.json  announcements.json  apps.json  blocks.json  bookmarks.json  conversations.json  custom_emojis.json  directory.json  domain_blocks.json  emails.json  endorsements.json  favourites.json  featured_tags.json  filters.json  follow_requests.json  followed_tags.json  grouped_notifications.json  instance.json  lists.json  markers.json  media.json  mutes.json  notifications.json  oauth.json  oembed.json  polls.json  preferences.json  profile.json  reports.json  scheduled_statuses.json  search.json  statuses.json  suggestions.json  tags.json  timelines.json  trends.json
TootNet.Generator/src/tootnet/: generate_cs_code.py  generate_template.py  main.py
TootNet.Test/: TootNet.Test.csproj  UnitTest1.cs
TootNet.Tests/: AccountInformation.cs.example  AccountTests.cs  AccountsTests.cs  AnnouncementsTests.cs  AppsTests.cs  AuthorizeTests.cs  BlocksTests.cs  BookmarksTests.cs  ConversationsTests.cs  CustomEmojiTests.cs  CustomEmojisTests.cs  DirectoryTests.cs  DomainBlocks.cs  DomainBlocksTests.cs  EndorsementsTests.cs  FavouritesTests.cs  FeaturedTagsTests.cs  FiltersTests.cs  FollowRequestsTests.cs  FollowSuggestionsTest.cs  FollowTests.cs  GroupedNotificationsTests.cs  (+23 more)
(+125 files in other folders)
